--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An Electron shell project with a transparent window",
   "main": "main.js",
   "scripts": {
-    "start": "electron --inspect ."
+    "start": "electron ."
   },
   "dependencies": {
     "electron": "^25.0.0"
