invert works, tesseract does not

--- a/package.json
+++ b/package.json
@@ -30,11 +30,15 @@
       "target": [
         {
           "target": "nsis",
-          "arch": ["x64"]
+          "arch": [
+            "x64"
+          ]
         },
         {
           "target": "portable",
-          "arch": ["x64"]
+          "arch": [
+            "x64"
+          ]
         }
       ]
     },
@@ -42,7 +46,10 @@
       "target": [
         {
           "target": "dmg",
-          "arch": ["x64", "arm64"]
+          "arch": [
+            "x64",
+            "arm64"
+          ]
         }
       ]
     },
@@ -50,7 +57,9 @@
       "target": [
         {
           "target": "AppImage",
-          "arch": ["x64"]
+          "arch": [
+            "x64"
+          ]
         }
       ]
     },
@@ -63,6 +72,7 @@
   },
   "author": "ScreenClip Developer",
   "dependencies": {
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "electron": "^25.0.0",
