--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "homepage": ".",
   "scripts": {
-    "start": "electron .",
+    "start": "node-local\\node-v18.20.4-win-x64\\node.exe node_modules\\electron\\cli.js .",
+    "start-global": "electron .",
     "build": "electron-builder",
     "build-win": "electron-builder --win",
     "build-mac": "electron-builder --mac",
